--- a/mindmap_local/services/auth-service/package.json
+++ b/mindmap_local/services/auth-service/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "Authentication service for Mindmap Local",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc --noEmit && esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js",
+    "build": "tsc --noEmit && esbuild src/index.ts --bundle --platform=node --target=node20 --outfile=dist/index.js",
     "start": "node dist/index.js"
   },
   "keywords": [],
